--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "kevin-dang-resume",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Resume website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kevin Dang <dangkevin12@gmail.com>",
   "dependencies": {
     "gatsby": "^2.8.5",
     "gatsby-image": "^2.1.2",
